# backend

./: .gitignore  Cargo.toml  JWT_UUID_FEATURES.md  MONGODB_SETUP.md  OTP_VERIFICATION_FIX.md  PANIC_RECOVERY_GUIDE.md  README.md  SOCKET_IO_EVENTS_DOCUMENTATION.md  SocketIODebugger.cs  SocketIOManager.cs  SocketIOTest.cs  WEBSOCKET_PANIC_FIX.md  env-template.txt  game-admin-backend.service  test-mongodb.js  test.js
src/: main.rs
src/api/: middleware.rs
src/config/: mod.rs
src/database/: gameplay_service.rs  mod.rs  models.rs  repository.rs  service.rs
src/handlers/: mod.rs
src/managers/: connection.rs  events.rs  gameplay_events.rs  jwt.rs  mod.rs  validation.rs
src/routes/: mod.rs
src/services/: mod.rs
src/utils/: mod.rs
src/websocket/: handler.rs
test-client/: LOGIN.md  SOCKET_IO_NOTES.md  debug-websocket.js  heartbeat-test.js  package-lock.json  package.json  requirements.txt  run-heartbeat-test.js  run-jwt-test.js  run-login-tests.js  simple-connection-test.js  test-all.js  test-backend-health.js  test-backend.js  test-comprehensive.js  test-connection-fix.js  test-device-info.js  test-device-status.js  test-device.js  test-gameplay-separate.js  test-gameplay.js  test-jwt-token.js  test-language-setting.js  test-login.js  test-otp-fix.js  test-otp.js  test-panic-recovery.js  test-user-profile.js  test-user-registration.js  test-validation.js  test-websocket-stability.js  test.js  test_connections.py
