[package]
name = "backendrust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
socketioxide = { version = "0.10", features = ["state"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
socket2 = "0.5.3"
serde_json = "1.0"
tower-livereload = "0.8.1"
tokio-stream = "0.1.14"

[dev-dependencies]
tokio-test = "0.4.2"
