[package]
name = "game-admin-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
socketioxide = { version = "0.10", features = ["state"] }
tower = { version = "0.4", features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.34"
dotenv = "0.15.0"
hyper = "1.1.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
once_cell = "1.19.0"
http-body-util = "0.1"
bytes = "1.0"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4.2"
