[package]
name = "game-admin-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
socketioxide = { version = "0.10", features = ["state"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3"
once_cell = "1.19.0"
rand = "0.8"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = { version = "2.8", features = ["uuid-1"] }
uuid = { version = "1.0", features = ["v7", "serde"] }
jsonwebtoken = "9.0"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4.2"
